src/components/browse-map/Map.module.css
.map {
  display: flex;
  justify-content: center;
}

.mainCon {
  position: relative;
  /* border: 2px solid red; */
  top: 15vh;
  left: 0vh;
}

.mainCon svg {
  z-index: -1;
  fill-opacity: 0.6;
  fill: var(--accent);
  fill: white;
  stroke: var(--primary);
  width: 70vw;
  height: 70vh;
}

@media only screen and (max-width: 900px) {
  .mainCon svg {
    width: 60vw;
    height: 60vh;
  }
}

.conInfo {
  position: absolute;
  display: grid;
  grid-template-columns: 100px 1fr;
  grid-template-rows: 1fr 150px;
  left: 20vw;
  top: 5vh;
  z-index: 1;
  background: rgba(255, 255, 255, 0);
  /* border: 1px dotted var(--secondary); */
  /* border: 1px solid green; */
}
.conName {
  grid-row: 1 / 2;
  grid-column: 1 / 3;
  text-shadow: 2px 2px var(--accent);
  margin: 0;
  padding: 0;
  font-size: var(--h2);
}
.repImg {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}
.nameAndLink {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.repName {
  font-size: var(--h4);
  margin: 10px 10px 10px 10px;
  text-shadow: 2px 2px var(--accent);

  /* background: rgba(255, 255, 255, 0.6);*/
}

.repImg {
  width: 100px;
}

.conLink {
  text-decoration: none;
  color: var(--primary);
  border: 1px solid;
  padding: 2px 10px 2px 10px;
  background: var(--veryLightGrey);

  margin: 10px 10px 10px 10px;
  align-self: flex-start;
}

.conLink:hover {
  transition: ease 0.2;
  transform: scale(1.01);
  background: var(--veryLightGrey);
  box-shadow: var(--level-3);
}

@media only screen and (max-width: 900px) {
  .conInfo {
    grid-template-columns: 60px 1fr;
    grid-template-rows: 1fr 100px;
    left: 10vw;
    top: 5vh;
    z-index: 1;
    /* border: 1px dotted var(--secondary); */
    /* border: 1px solid green; */
  }

  .conName {
    font-size: var(--h4);
  }

  .repImg {
    width: 60px;
  }

  .nameAndLink {
    flex-wrap: nowrap;
  }
  .repName {
    font-size: var(--h6);
    margin: 5px;
    text-shadow: 1px 1px var(--accent);

    /* background: rgba(255, 255, 255, 0.6);*/
  }

  .conLink {
    margin: 5px;
    padding: 1px;
  }
}

.sideCon {
  z-index: 2;
}

.sideCon svg {
  z-index: 1;
  fill-opacity: 0.6;
  fill: var(--accent);
  fill: white;
  stroke: var(--primary);
}

.sideCon svg:hover {
  transform: scale(1.1);
  transition-duration: 0.5s;
}
.sideConName {
  position: absolute;
  font-size: var(--h5);
}
.sideCon h4 {
  position: absolute;
  z-index: 1;
  margin: 0;
  padding: 0;
  pointer-events: none;
  text-shadow: 1px 1px var(--accent);
}

@media only screen and (max-width: 900px) {
  .sideCon svg {
    fill-opacity: 0.3;
  }

  .sideConName {
    font-size: var(--smallText);
  }
}
.west svg {
  position: absolute;
  top: 30vh;
  left: -15vw;
}
.west h4 {
  top: 40vh;
  left: 2vw;
}

.northWest svg {
  position: absolute;
  top: -10vh;
  left: -15vw;
}
.northWest h4 {
  top: 0vh;
  left: 2vw;
}

.southWest svg {
  position: absolute;
  top: 75vh;
  left: -15vw;
}
.southWest h4 {
  top: 80vh;
  left: 2vw;
}
.north svg {
  position: absolute;
  top: -10vh;
  left: 30vw;
}
.north h4 {
  top: 0vh;
  left: 45vw;
}
.south svg {
  position: absolute;
  top: 75vh;
  left: 30vw;
}
.south h4 {
  top: 80vh;
  left: 45vw;
}

.east svg {
  position: absolute;
  top: 30vh;
  left: 80vw;
}
.east h4 {
  top: 40vh;
  left: 85vw;
}
.northEast svg {
  position: absolute;
  top: -10vh;
  left: 80vw;
}
.northEast h4 {
  top: 0vh;
  left: 85vw;
}

.southEast svg {
  position: absolute;
  top: 75vh;
  left: 80vw;
}
.southEast h4 {
  top: 80vh;
  left: 85vw;
}

.InnerWest svg {
  position: absolute;
  top: 50vh;
  left: 5vw;
}
.InnerWest h4 {
  top: 55vh;
  left: 15vw;
}

.InnerEast svg {
  position: absolute;
  top: 50vh;
  left: 60vw;
}
.InnerEast h4 {
  top: 55vh;
  left: 70vw;
}

@media only screen and (max-width: 900px) {
  .west svg {
    top: 25vh;
    left: -15vw;
  }
  .west h4 {
    top: 35vh;
    left: -2vw;
  }

  .northWest svg {
    top: -10vh;
    left: -15vw;
  }
  .northWest h4 {
    top: 0vh;
    left: -2vw;
  }

  .southWest svg {
    top: 60vh;
    left: -15vw;
  }
  .southWest h4 {
    top: 70vh;
    left: -2vw;
  }
  .north svg {
    top: -10vh;
    left: 30vw;
  }
  .north h4 {
    top: 0vh;
    left: 35vw;
  }
  .south svg {
    top: 60vh;
    left: 30vw;
  }
  .south h4 {
    top: 70vh;
    left: 35vw;
  }

  .east svg {
    top: 25vh;
    left: 75vw;
  }
  .east h4 {
    top: 35vh;
    left: 75vw;
  }
  .northEast svg {
    top: -10vh;
    left: 75vw;
  }
  .northEast h4 {
    top: 0vh;
    left: 75vw;
  }

  .southEast svg {
    top: 60vh;
    left: 75vw;
  }
  .southEast h4 {
    top: 70vh;
    left: 75vw;
  }

  .InnerWest svg {
    top: 45vh;
    left: 0vw;
  }
  .InnerWest h4 {
    top: 50vh;
    left: 10vw;
  }

  .InnerEast svg {
    top: 45vh;
    left: 60vw;
  }
  .InnerEast h4 {
    top: 50vh;
    left: 70vw;
  }
}

.navInstructions {
  pointer-events: none;
  position: absolute;
  width: 100%;
  top: 60vh;
  font-weight: bold;
  font-size: var(--h6);
  text-align: center;
}

@media only screen and (max-width: 900px) {
  .navInstructions {
    top: 75vh;
    font-size: var(--h4);
    text-align: center;
  }
}

.linkHome {
  position: absolute;
  left: 20vw;
  top: 5vh;
  font-size: 24px;
  border-bottom: 1px solid var(--accent);
}

@media only screen and (max-width: 900px) {
  .linkHome {
    font-size: 16px;
    top: 18vh;
    left: 62vw;
    z-index: 5;
  }
}

